--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "aos": "^2.3.4",
     "axios": "^0.21.1",
     "cra-template": "1.1.2",
     "google-maps-react": "^2.0.6",
